...
      sectionOffsets.current[key] = e.nativeEvent.layout.y;
    };
  }

  return (
    <View
      testID="merchant-analytics-screen"
      className="flex-1 bg-background"
      style={{ paddingTop: insets.top, paddingBottom: insets.bottom }}
    >
      <ScrollView
        ref={scrollViewRef}
        className="flex-1"
...
